* $(document).click() is now $(document).mousedown(), thus $display.click() no longer needs to return false. (sbox.js) * Select box entries are now clickable through .mousedown() instead of .click(), which fixes a problem with IE 6/7 when dragging the scrollbar and releasing the mouse button outside of the select box (guess what, it would close it.) (sbox.js) ! ...And the fix above caused IE 6/7/8 to select the item text in some cases, so I added an onselectstart event that adds 12 bytes to the gzipped file, which I compensated in other areas to retain the exact same final size. I am absolutely mental. Please help me. (sbox.js) - Got rid of setting maxHeight in dropdown CSS, to add support for scrollbars in IE6. It's ongoing though, so it still actually doesn't work in IE6 but it'll be done soon enough. (sbox.js) - Select box 'text' class doesn't need to be an inline block, really. Also, 'items' class (unordered list) behaves better as inline. (index.css) + Added a hover effect on select box scrollbar thumbs. (index.css)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -186,8 +186,8 @@ ul#noava
 	ul
 		padding: 7px
 		margin: 0 12px
-		overflow: hidden
 		list-style: none
+		overflow: hidden
 		border: 1px dotted #999
 		border-width: 0 0 1px 0
 		li extends .arrows
@@ -560,10 +560,10 @@ input[type=file]
 	margin-top: -24px
 
 .menu li
+	margin, padding: 0
 	list-style: none
 	cursor: pointer
 	height: auto
-	margin, padding: 0
 	float: left
 	display: block
 
@@ -1270,7 +1270,7 @@ select.sb
 	text-align: left
 	margin: 1px
 
-	.text extends .inline-block
+	.text
 		vertical-align: baseline
 		white-space: nowrap
 
@@ -1340,14 +1340,15 @@ select.sb
 		background: #fff
 		border: 1px solid #828790
 		border-radius: 5px
-		display: block
+		display: inline
 		font-size: 1em
+		padding: 2px
 		margin: 0
+		list-style: none
 		overflow: hidden
 		position: absolute
 		z-index: 999
 		box-shadow: 0 2px 5px rgba(0,0,0, .3)
-		padding: 2px
 
 		&.above
 			box-shadow: 0 -2px 5px rgba(0,0,0, .3)
@@ -1389,7 +1390,6 @@ select.sb
 		li.last .item
 			border-radius: 0 0 5px 5px
 
-
 	/* custom scrollbar */
 	.overview
 		overflow: hidden
@@ -1415,6 +1415,9 @@ select.sb
 		position: absolute
 		top: 0
 		left: -1px
+		:hover
+			background: #e8ece8
+			background: -prefix-linear-gradient(left, #ddd, #e8ece8, #ccc)
 
 .cat .sbox
 	font-size: 14px
